# font-reader

./: Cargo.toml
src/: lib.rs  main.rs  types.rs
src/formats/: mod.rs  ttc.rs  ttf.rs
